# TransportLayer

./: CMakeLists.txt  README.md
include/: Administrator.h  Authenticate.h  Authorization.h  GameMaster.h  InvokeHandler.h  LoginHandler.h  Middleware.h  OpcodeHandler.h  Opcodes.h  Permission.h  Permissions.h  Player.h  Test1.h  Test2.h  TransportLayer.h  TransportLayerException.h  WorldPacket.h
src/: main.cpp
src/Logger/: Authenticate.cpp
src/Middlewares/Authorization/Administrator/: Administrator.cpp
src/Middlewares/Authorization/BaseAuthorization/: Permission.cpp
src/Middlewares/Authorization/GameMaster/: GameMaster.cpp
src/Middlewares/Authorization/Handler/: Authorization.cpp
src/Middlewares/InvokeHandler/: InvokeHandler.cpp
src/Player/: Player.cpp
src/TransportLayer/: TransportLayer.cpp
src/WorldPacket/: WorldPacket.cpp
